@@ -396,6 +396,8 @@ const specflags_t simplecond_names[] =
 	{"ATTACKING",   COND_Attacking,  0},
 	{"RAMPAGING",   COND_Rampaging,  0},
 	{"USING",       COND_Using,      0},
+	{"ACTION1",     COND_Action1,    0},
+	{"ACTION2",     COND_Action2,    0},
 	{"WALKING",     COND_Walking,    0},
 	{NULL, 0, 0}
 };
